# journald-send

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  justfile  pyproject.toml
.github/workflows/: ci.yaml
docs/: api.rst  conf.py  index.rst  requirements.txt
examples/: basic.py  custom_fields.py  send_compliant.py  send_compliant_vi.py  send_standard.py  send_standard_vi.py  structured_logging.py
src/: lib.rs  linux.rs
src/journald_send/: __init__.py  _core.pyi  base.py  log_handler.py
tests/: test_fallback_logic.py  test_journald_send.py  test_logging_handler.py
