[package]
name = "journald-send"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.28.3"
libc = "0.2"
rustix = { version = "1.1.4", default-features = false, features = ["net"] }
memfd = "0.6.5"
