[project]
name = "journald-send"
authors = [
    { name = "Nguyễn Hồng Quân", email = "ng.hong.quan@gmail.com" }
]
license = "Apache-2.0"
requires-python = ">=3.12"
readme = "README.md"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Typing :: Typed",
]
dynamic = ["version"]


[build-system]
requires = ["maturin>=1.12,<2.0"]
build-backend = "maturin"

[dependency-groups]
dev = [
    "maturin>=1.13.1",
]
docs = [
    "sphinx>=8.0",
    "furo",
    "sphinx-autobuild",
]
lint = [
    "ruff>=0.15.10",
]
test = [
    "pytest>=9.0.3",
]


[tool.maturin]
python-source = "src"
module-name = "journald_send._core"
strip = true


[tool.ruff]
line-length = 120
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "*/static/CACHE/*",
]

[tool.ruff.lint]
select = ['E4', 'E7', 'E9', 'F', 'I', 'BLE001', 'ANN', 'UP']

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN201"]

[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2

[tool.ruff.format]
quote-style = "single"
