[project]
name = "journald-send"
description = "A thin library to send messages to journald using its native protocol."
authors = [
    { name = "Nguyễn Hồng Quân", email = "ng.hong.quan@gmail.com" }
]
license = "Apache-2.0"
requires-python = ">=3.12"
readme = "README.md"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Operating System :: POSIX :: Linux",
    "Typing :: Typed",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/hongquan/journald-send"
Documentation = "https://journald-send.readthedocs.io"
Repository = "https://github.com/hongquan/journald-send"
Changelog = "https://github.com/hongquan/journald-send/blob/main/CHANGELOG.md"


[build-system]
requires = ["maturin>=1.12,<2.0"]
build-backend = "maturin"

[dependency-groups]
dev = [
    "maturin>=1.13.1",
]
docs = [
    "sphinx>=9.1.0",
    "furo",
    "sphinx-autobuild",
    "myst-parser>=5.0.0",
]
lint = [
    "ruff>=0.15.10",
]
test = [
    "pytest>=9.0.3",
]


[tool.maturin]
python-source = "src"
module-name = "journald_send._core"
strip = true


[tool.ruff]
line-length = 120
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "*/static/CACHE/*",
]

[tool.ruff.lint]
select = ['E4', 'E7', 'E9', 'F', 'I', 'BLE001', 'ANN', 'UP']

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN201"]

[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2

[tool.ruff.format]
quote-style = "single"
